test/language/spec/stdlib/invalid/array_non_int_n.topo
// TEST: array<i64, i64> with a type where the integer N is required
// EXPECT-ERROR: array<T, N>: N must be an integer literal

namespace bad {
  public:
    array<i64, i64> badCount();
}
